SONAR-5851 add app skeleton

--- a/server/sonar-web/src/main/hbs/nav/nav-global-navbar.hbs
+++ b/server/sonar-web/src/main/hbs/nav/nav-global-navbar.hbs
@@ -41,6 +41,9 @@
     <li {{#isActiveLink '/profiles'}}class="active"{{/isActiveLink}}>
       <a href="{{link '/profiles'}}">{{t 'quality_profiles.page'}}</a>
     </li>
+    <li {{#isActiveLink '/quality_profiles'}}class="active"{{/isActiveLink}}>
+      <a href="{{link '/quality_profiles'}}">NEW {{t 'quality_profiles.page'}}</a>
+    </li>
     <li {{#isActiveLink '/quality_gates'}}class="active"{{/isActiveLink}}>
       <a href="{{link '/quality_gates'}}">{{t 'quality_gates.page'}}</a>
     </li>
