--- a/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/_new.html.erb
+++ b/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/_new.html.erb
@@ -44,7 +44,7 @@
     <tr>
       <td colspan="2" align="left">
         <%= submit_tag message('create') %>
-        <a href="<%= url_for :controller => 'profiles', :action => 'index' -%>" class="action"><%= message('cancel') -%></a>
+        <a href="<%= url_for :controller => 'old_profiles', :action => 'index' -%>" class="action"><%= message('cancel') -%></a>
       </td>
     </tr>
   </table>
