--- a/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/_rename_form.html.erb
+++ b/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/_rename_form.html.erb
@@ -1,4 +1,4 @@
-<form id="rename-profile-form" method="post" action="profiles/rename">
+<form id="rename-profile-form" method="post" action="old_profiles/rename">
   <input type="hidden" name="id" value="<%= @profile.id -%>"/>
   <fieldset>
 
