--- a/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/_restore_form.html.erb
+++ b/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/_restore_form.html.erb
@@ -1,4 +1,4 @@
-<form id="restore-profile-form" action="profiles/restore" enctype="multipart/form-data" method="POST">
+<form id="restore-profile-form" action="old_profiles/restore" enctype="multipart/form-data" method="POST">
   <fieldset>
 
     <div class="modal-head">
