--- a/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/_copy_form.html.erb
+++ b/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/_copy_form.html.erb
@@ -1,4 +1,4 @@
-<form id="copy-profile-form" method="post" action="profiles/copy">
+<form id="copy-profile-form" method="post" action="old_profiles/copy">
   <input type="hidden" name="id" value="<%= @profile.id -%>"/>
   <fieldset>
     <div class="modal-head">
