--- a/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/_create_form.html.erb
+++ b/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/_create_form.html.erb
@@ -2,7 +2,7 @@
    language = controller.java_facade.getLanguages().find { |l| l.getKey()==language_key }
    importers = Internal.component(Java::OrgSonarServerQualityprofile::QProfileExporters.java_class).findProfileImportersForLanguage(language_key)
 %>
-<form id="create-profile-form" action="profiles/create" enctype="multipart/form-data" method="POST">
+<form id="create-profile-form" action="old_profiles/create" enctype="multipart/form-data" method="POST">
   <fieldset>
     <input type="hidden" name="language" value="<%= language_key -%>"/>
 
