--- a/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/inheritance.html.erb
+++ b/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/inheritance.html.erb
@@ -2,11 +2,11 @@
   <header class="page-header">
     <h1 class="page-title"><%= h @profile.name -%></h1>
     <div class="page-description">
-      <a href="<%= ApplicationController.root_context -%>/profiles">&larr;&nbsp;<%= h message('quality_profiles.page') -%></a>
+      <a href="<%= ApplicationController.root_context -%>/old_profiles">&larr;&nbsp;<%= h message('quality_profiles.page') -%></a>
     </div>
   </header>
 
-<%= render :partial => 'profiles/tabs', :locals => {:selected_tab=>'inheritance'} %>
+<%= render :partial => 'old_profiles/tabs', :locals => {:selected_tab=>'inheritance'} %>
 
 <div class="tabs-panel marginbottom10">
 
