--- a/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/permalinks.html.erb
+++ b/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/permalinks.html.erb
@@ -2,11 +2,11 @@
   <header class="page-header">
     <h1 class="page-title"><%= h @profile.name -%></h1>
     <div class="page-description">
-      <a href="<%= ApplicationController.root_context -%>/profiles">&larr;&nbsp;<%= h message('quality_profiles.page') -%></a>
+      <a href="<%= ApplicationController.root_context -%>/old_profiles">&larr;&nbsp;<%= h message('quality_profiles.page') -%></a>
     </div>
   </header>
 
-<%= render :partial => 'profiles/tabs', :locals => {:selected_tab=>'Permalinks'} %>
+<%= render :partial => 'old_profiles/tabs', :locals => {:selected_tab=>'Permalinks'} %>
 
 <div class="tabs-panel marginbottom10 ">
 	<% exporters = Internal.qprofile_exporters.exportersForLanguage(@profile.language()) %>
@@ -18,7 +18,7 @@
 	      <%= message('quality_profiles.export_all_rules') -%>
 	    </td>
 	    <td>
-	      <% permalink = url_for :controller => 'profiles', :action => 'export', :language => @profile.language(), :name => url_encode(@profile.name()), :only_path => false %>
+	      <% permalink = url_for :controller => 'old_profiles', :action => 'export', :language => @profile.language(), :name => url_encode(@profile.name()), :only_path => false %>
 	      <span class="small"><%= link_to permalink, permalink %></span>
 	    </td>
 	  </tr>
@@ -28,7 +28,7 @@
 	        <%= h exporter.getName() -%>
 	      </td>
 	      <td>
-	        <% permalink=url_for :controller => 'profiles', :action => 'export', :language => @profile.language(), :name => url_encode(@profile.name()), :format => exporter.getKey(), :only_path => false %>
+	        <% permalink=url_for :controller => 'old_profiles', :action => 'export', :language => @profile.language(), :name => url_encode(@profile.name()), :format => exporter.getKey(), :only_path => false %>
 	        <span class="small"><%= link_to permalink, permalink, :id => "export_" + exporter.getKey().to_s + "_" + @profile.key() %></span>
 	      </td>
 	    </tr>
