--- a/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/show.html.erb
+++ b/server/sonar-web/src/main/webapp/WEB-INF/app/views/old_profiles/show.html.erb
@@ -2,11 +2,11 @@
   <header class="page-header">
     <h1 class="page-title"><%= h @profile.name -%></h1>
     <div class="page-description">
-      <a href="<%= ApplicationController.root_context -%>/profiles">&larr;&nbsp;<%= h message('quality_profiles.page') -%></a>
+      <a href="<%= ApplicationController.root_context -%>/old_profiles">&larr;&nbsp;<%= h message('quality_profiles.page') -%></a>
     </div>
   </header>
 
-  <%= render :partial => 'profiles/tabs', :locals => {:selected_tab=>'Rules'} %>
+  <%= render :partial => 'old_profiles/tabs', :locals => {:selected_tab=>'Rules'} %>
 
   <div class="tabs-panel marginbottom10 ">
     <% active_rules = @stats.get('countActiveRules').get(0).getValue() if @stats && @stats.get('countActiveRules') %>
